nginxpv.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx5
    app: web
  name: nginx5
spec:
  containers:
  - image: nginx
    name: nginx5
    volumeMounts:
    - mountPath: /data
      name: task-pv-volume
  restartPolicy: Always
  volumes:
  - name: task-pv-volume
    persistentVolumeClaim:
      claimName: task-pv-claim
