prom.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: prometheus
  name: prometheus
spec:
  containers:
  - image: prom/prometheus
    name: prometheus
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
